--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header class="header">
+      <div class="container">
+        <a class="header__logo" href="#">HolaJuniors.com</a>
+        <nav class="header__nav">
+          <button class="btn">Email</button>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="intro">Intro</section>
+    </main>
   </body>
 </html>
