--- a/index.html
+++ b/index.html
@@ -16,8 +16,22 @@
         </nav>
       </div>
     </header>
-    <main>
-      <section class="intro">Intro</section>
+    <main class="main">
+      <section class="intro">
+        <div class="container">
+          <div class="intro__text">
+            <h1 class="intro__title">Lorem ipsum dolor sit amet.</h1>
+            <p class="intro__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              sapiente blanditiis, dolorem earum veniam tempora nisi assumenda,
+              accusantium explicabo ullam cupiditate molestiae.
+            </p>
+          </div>
+          <div class="intro__photo">
+            <img src="./img/1.jpg" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
