--- a/index.html
+++ b/index.html
@@ -32,6 +32,45 @@
           </div>
         </div>
       </section>
+      <section class="feature">
+        <div class="container">
+          <div class="feature__text">
+            <h2 class="feature__title">Mis habilidades</h2>
+            <p class="feature__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis animi eum maiores?
+            </p>
+          </div>
+          <div class="feature__content">
+            <div class="feature__item">
+              <h3>React</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Incidunt tempora nam magni officiis modi.
+              </p>
+            </div>
+            <div class="feature__item">
+              <h3>PHP, SQL y Laravel</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Perferendis eveniet expedita minus.
+              </p>
+            </div>
+            <div class="feature__item">
+              <h3>SEO</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Perferendis eveniet expedita minus.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="showcase">
+        <div class="container">
+          <h2>Mi experiencia</h2>
+        </div>
+      </section>
     </main>
   </body>
 </html>
