--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
       <div class="container">
         <a class="header__logo" href="#">HolaJuniors.com</a>
         <nav class="header__nav">
-          <button class="btn">Email</button>
+          <button class="btn btn--secondary">Email</button>
         </nav>
       </div>
     </header>
     <main class="main">
-      <section class="intro">
+      <section class="hero">
         <div class="container">
-          <div class="intro__text">
-            <h1 class="intro__title">Lorem ipsum dolor sit amet.</h1>
-            <p class="intro__description">
+          <div class="hero__text">
+            <h1 class="hero__title">Lorem ipsum dolor sit amet.</h1>
+            <p class="hero__description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
               sapiente blanditiis, dolorem earum veniam tempora nisi assumenda,
               accusantium explicabo ullam cupiditate molestiae.
             </p>
           </div>
-          <div class="intro__photo">
+          <div class="hero__photo">
             <img src="./img/1.jpg" />
           </div>
         </div>
       </section>
       <section class="feature">
         <div class="container">
-          <div class="feature__text">
-            <h2 class="feature__title">Mis habilidades</h2>
-            <p class="feature__description">
+          <div class="section-intro">
+            <h2 class="secondary-heading">Mis habilidades</h2>
+            <p class="section-intro__paragraph">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perspiciatis animi eum maiores?
             </p>
@@ -68,7 +68,64 @@
       </section>
       <section class="showcase">
         <div class="container">
-          <h2>Mi experiencia</h2>
+          <div class="section-intro">
+            <h2 class="secondary-heading">Mi experiencia</h2>
+            <p class="section-intro__paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
+              ipsam consequatur modi laboriosam molestias doloribus voluptatum.
+            </p>
+            <button class="btn btn--primary">GitHub o Contacto</button>
+          </div>
+          <div class="showcase__works">
+            <div class="showcase__works-item">
+              <img src="./img/works/1.jpg" />
+              <h3>Trabajo experimental #1</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo obcaecati repudiandae inventore voluptatum odit.
+              </p>
+            </div>
+            <div class="showcase__works-item">
+              <img src="./img/works/2.jpg" />
+              <h3>Trabajo experimental #1</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo obcaecati repudiandae inventore voluptatum odit.
+              </p>
+            </div>
+            <div class="showcase__works-item">
+              <img src="./img/works/3.jpg" />
+              <h3>Trabajo experimental #1</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo obcaecati repudiandae inventore voluptatum odit.
+              </p>
+            </div>
+            <div class="showcase__works-item">
+              <img src="./img/works/4.jpg" />
+              <h3>Trabajo experimental #1</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo obcaecati repudiandae inventore voluptatum odit.
+              </p>
+            </div>
+            <div class="showcase__works-item">
+              <img src="./img/works/5.jpg" />
+              <h3>Trabajo experimental #1</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo obcaecati repudiandae inventore voluptatum odit.
+              </p>
+            </div>
+            <div class="showcase__works-item">
+              <img src="./img/works/6.jpg" />
+              <h3>Trabajo experimental #1</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Explicabo obcaecati repudiandae inventore voluptatum odit.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
