--- a/index.html
+++ b/index.html
@@ -129,5 +129,24 @@
         </div>
       </section>
     </main>
+    <footer class="contact">
+      <div class="container">
+        <h2 class="secondary-heading">
+          Si necesita más información:<br />
+          <span class="contact__email">tu@email.com</span>
+        </h2>
+        <div class="contact__social">
+          <a href="#" class="contact__social-icon"
+            ><img src="./icons/instagram.svg" alt="instagram icon"
+          /></a>
+          <a href="#" class="contact__social-icon"
+            ><img src="./icons/linkedin.svg" alt="linkedin icon"
+          /></a>
+          <a href="#" class="contact__social-icon"
+            ><img src="./icons/github.svg" alt="github icon"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
